--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
         "express": "^4.21.2",
         "express-rate-limit": "^7.5.0",
         "helmet": "^8.0.0",
-        "mongoose": "^8.12.0"
+        "mongoose": "^8.12.0",
+        "nodemailer": "^6.10.0"
     },
     "devDependencies": {
         "@types/cors": "^2.8.17",
         "@types/express": "^5.0.0",
         "@types/jest": "^29.5.14",
         "@types/node": "^22.13.9",
+        "@types/nodemailer": "^6.4.17",
         "@types/supertest": "^6.0.2",
         "@typescript-eslint/eslint-plugin": "^8.26.0",
         "@typescript-eslint/parser": "^8.26.0",
