--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
     "main": "src/index.js",
     "scripts": {
         "start": "node dist/index.js",
-        "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-        "build": "tsc",
+        "dev": "netlify dev",
+        "build": "tsc && cp -r src/public public",
         "lint": "eslint . --ext .ts",
         "seed": "ts-node src/utils/seedDatabase.ts",
-        "test": "jest --coverage",
-        "prepare": "npm run build"
+        "import": "ts-node src/utils/bulkImporter.ts",
+        "test": "jest --coverage"
     },
     "keywords": [],
     "author": "LilliDarling",
@@ -23,7 +23,8 @@
         "express-rate-limit": "^7.5.0",
         "helmet": "^8.0.0",
         "mongoose": "^8.12.0",
-        "nodemailer": "^6.10.0"
+        "nodemailer": "^6.10.0",
+        "serverless-http": "^3.2.0"
     },
     "devDependencies": {
         "@types/cors": "^2.8.17",
