--- a/netlify.toml
+++ b/netlify.toml
@@ -4,11 +4,20 @@
   functions = "netlify/functions"
 
 [build.environment]
-  NODE_VERSION = "18"
-  NPM_FLAGS = "--version"  # Prevents Netlify from running npm install
+  NODE_VERSION = "22"
+  NETLIFY_USE_PNPM = "true"
+
+[[plugins]]
+  package = "@netlify/plugin-functions-core"
+
+# Use a custom build command to install pnpm first
+[[plugins]]
+  package = "@netlify/plugin-local-install-core"
+
+[plugins.inputs]
+  packageManager = "pnpm"
 
 [dev]
-  command = "pnpm run dev"
   functionsPort = 8888
 
 [[redirects]]
@@ -20,6 +29,3 @@
   from = "/*"
   to = "/index.html"
   status = 200
-
-[[plugins]]
-  package = "@netlify/plugin-pnpm"
