--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start": "node dist/index.js",
         "dev": "netlify dev",
-        "build": "tsc && cp -r src/public",
+        "build": "tsc && mkdir -p public && cp -r src/public/* public/ || true",
         "lint": "eslint . --ext .ts",
         "seed": "ts-node src/utils/seedDatabase.ts",
         "import": "ts-node src/utils/bulkImporter.ts",
