--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
         "express": "^4.21.2",
         "express-rate-limit": "^7.5.0",
         "helmet": "^8.0.0",
+        "mongodb": "^6.14.1",
         "mongoose": "^8.12.0",
         "nodemailer": "^6.10.0",
         "serverless-http": "^3.2.0"
     },
     "devDependencies": {
+        "@netlify/functions": "^3.0.0",
         "@types/cors": "^2.8.17",
         "@types/express": "^5.0.0",
         "@types/jest": "^29.5.14",
